@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*less-452.ebuild (23 Oct 2012)
+
+  23 Jul 2012; Martin Väth <martin@mvath.de>
+  Bump less version. Add USE=sources
+
 *less-451.ebuild (23 Jul 2012)
 
   21 Sep 2012; Martin Väth <martin@mvath.de>
